--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-spring": "^9.7.3",
-    "react-stripe-checkout": "^2.6.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
